# BibQuest

./: .gitignore  CITATION.cff  README.md  pyproject.toml
example/: bibliography.bib  document.tex
src/: bibquest.py
